# Examen-2-Israel-Lara

./: CMakeLists.txt  README.md  main.cpp
parte1/: ejercicio1.cpp  ejercicio1.h
parte2/: ejercicio2.cpp  ejercicio2.h
parte3/: ejercico3.cpp  ejercico3.h
parte4/: ejercicio4.cpp  ejercicio4.h
