cmake_minimum_required(VERSION 3.29)
project(Examen_2_Israel_Lara)

set(CMAKE_CXX_STANDARD 14)

add_executable(Examen_2_Israel_Lara
    main.cpp
        parte1/ejercicio1.h
        parte1/ejercicio1.cpp
        parte2/ejercicio2.h
        parte2/ejercicio2.cpp
        parte3/ejercico3.h
        parte3/ejercico3.cpp
        parte4/ejercicio4.h
        parte4/ejercicio4.cpp)
